Fixed navbar overlapping sections

--- a/styles/HomePage/section2.module.css
+++ b/styles/HomePage/section2.module.css
@@ -1,5 +1,5 @@
 .section2-container{
-    @apply flex flex-col items-center justify-center w-full my-24 lg:justify-between lg:flex-row bg-light-200;
+    @apply flex flex-col items-center justify-center w-full mt-24 lg:justify-between lg:flex-row bg-light-200;
 }
 
 .section2-container__grid-image{
