--- a/styles/HomePage/section4.module.css
+++ b/styles/HomePage/section4.module.css
@@ -1,5 +1,5 @@
 .HomePage_section3__container{
-    @apply mb-24;
+    @apply pt-24 mb-24;
 }
 
 .section3__card{
